[gd_scene load_steps=7 format=3 uid="uid://wdb8fls0ck8v"]

[ext_resource type="Script" uid="uid://if7btgowt67r" path="res://tiles/vanish/vanish_effect.gd" id="1_fy87n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_numk8"]
size = Vector2(128, 128)

[sub_resource type="Animation" id="Animation_dfmcq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_uhifh"]
resource_name = "appear"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_3dgkk"]
resource_name = "vanish"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lx6mq"]
_data = {
&"RESET": SubResource("Animation_dfmcq"),
&"appear": SubResource("Animation_uhifh"),
&"vanish": SubResource("Animation_3dgkk")
}

[node name="VanishEffect" type="Node2D"]
script = ExtResource("1_fy87n")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(64, 64)

[node name="Area" type="Area2D" parent="."]
position = Vector2(64, 64)
collision_layer = 0
collision_mask = 0

[node name="CollisionShape" type="CollisionShape2D" parent="Area"]
shape = SubResource("RectangleShape2D_numk8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lx6mq")
}
autoplay = "vanish"

[node name="InvisibilityTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_exited" from="Area" to="." method="_on_area_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="InvisibilityTimer" to="." method="_on_invisibility_timer_timeout"]
